argocd/bootstrap/argocd-repo-server-forgejo-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server-forgejo
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-repo-server
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: forgejo
            k8s:app.kubernetes.io/instance: forgejo
            k8s:app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
